--- a/index.html
+++ b/index.html
@@ -132,6 +132,218 @@
   </div>  
 <!--   -->
 
+<!--   -->
+<div class="album py-5">
+
+  <div class="container bg-dark">
+
+    <div class="row row-cols-1 row-cols-sm-1 row-cols-md-2 g-2">
+
+      <div class="col" id="div-col">
+
+        <div class="card shadow-sm">
+
+          <img class="bd-placeholder-img card-img-top" src="#" width="100%" height="225" >
+
+          <div class="card-body  bg-dark">
+            <h5 class="card-title">Card title</h5>      
+            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <div class="d-flex justify-content-between align-items-center">
+                  <div class="btn-group">
+                      <button type="button" class="btn btn-md btn-outline-secondary">View</button>
+                  </div>
+              </div>
+
+          </div>
+
+        </div>
+
+      </div>
+
+
+      <div class="col-6" id="div-col">
+
+        <div class="card shadow-sm ">
+
+          <img class="bd-placeholder-img card-img-top" src="#" width="100%" height="225" >
+
+          <div class="card-body  bg-dark">
+            <h5 class="card-title">Card title</h5>     
+            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <div class="d-flex justify-content-between align-items-center">
+                  <div class="btn-group">
+                    <button type="button" class="btn btn-md btn-outline-secondary">View</button>
+                  </div>
+              </div>
+
+          </div>
+
+        </div>
+
+      </div>
+
+      <div class="col" id="div-col">
+
+        <div class="card shadow-sm">
+
+          <img class="bd-placeholder-img card-img-top" src="#" width="100%" height="225" >
+
+          <div class="card-body  bg-dark">
+            <h5 class="card-title">Card title</h5>      
+            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <div class="d-flex justify-content-between align-items-center">
+                  <div class="btn-group">
+                    <button type="button" class="btn btn-md btn-outline-secondary">View</button>
+                  </div>
+              </div>
+
+          </div>
+
+        </div>
+
+      </div>
+
+
+      <div class="col" id="div-col">
+
+        <div class="card shadow-sm ">
+
+          <img class="bd-placeholder-img card-img-top" src="#" width="100%" height="225" >
+
+          <div class="card-body  bg-dark">
+            <h5 class="card-title">Card title</h5>     
+            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <div class="d-flex justify-content-between align-items-center">
+                  <div class="btn-group">
+                    <button type="button" class="btn btn-md btn-outline-secondary">View</button>
+                  </div>
+              </div>
+
+          </div>
+
+        </div>
+
+      </div>
+
+      <div class="col" id="div-col">
+
+        <div class="card shadow-sm">
+
+          <img class="bd-placeholder-img card-img-top" src="#" width="100%" height="225" >
+
+          <div class="card-body  bg-dark">
+            <h5 class="card-title">Card title</h5>      
+            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <div class="d-flex justify-content-between align-items-center">
+                  <div class="btn-group">
+                    <button type="button" class="btn btn-md btn-outline-secondary">View</button>
+                  </div>
+              </div>
+
+          </div>
+
+        </div>
+
+      </div>
+
+      <div class="col" id="div-col">
+
+        <div class="card shadow-sm">
+
+          <img class="bd-placeholder-img card-img-top" src="#" width="100%" height="225" >
+
+          <div class="card-body  bg-dark">
+            <h5 class="card-title">Card title</h5>
+                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <div class="d-flex justify-content-between align-items-center">
+                  <div class="btn-group">
+                    <button type="button" class="btn btn-md btn-outline-secondary">View</button>
+                  </div>
+              </div>
+
+          </div>
+
+        </div>
+
+      </div>
+
+
+      
+    </div>
+  </div>
+</div>
+<!--   -->
+
+
+<!--   -->
+<div class="container-fuiled" >
+
+  <footer class="py-5">
+
+    <div class="row" id="footer-row">
+
+      <div class="col-2">
+
+        <h5>Section</h5>
+
+        <ul class="nav flex-column">
+          <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Home</a></li>
+          <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Features</a></li>
+          <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Pricing</a></li>
+          <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">FAQs</a></li>
+          <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">About</a></li>
+        </ul>
+
+      </div>
+
+      <div class="col-2">
+
+        <h5>Section</h5>
+
+        <ul class="nav flex-column">
+          <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Home</a></li>
+          <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Features</a></li>
+          <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Pricing</a></li>
+          <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">FAQs</a></li>
+          <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">About</a></li>
+        </ul>
+      </div>
+
+
+      <div class="col-4 offset-1">
+
+        <form>
+
+          <h5>Subscribe to our newsletter</h5>
+
+          <p>Monthly digest of whats new and exciting from us.</p>
+
+          <div class="d-flex w-100 gap-2">
+
+            <label for="newsletter1" class="visually-hidden">Email address</label>
+            <input id="newsletter1" type="text" class="form-control" placeholder="Email address">
+            <button class="btn btn-primary" type="button">Subscribe</button>
+
+          </div>
+
+        </form>
+
+      </div>
+
+    </div>
+
+    <div class="text-center text-muted">
+
+      <p>&copy; 2021 Company, Inc. All rights reserved.</p>
+
+    </div>
+
+  </footer>
+   
+</div>
+
+
+<!--   -->
       
   </body>
 
